--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -57,8 +57,8 @@ jobs:
             # mandatory
             -Dsonar.projectKey=kodetesting_testing-demo1
             -Dsonar.organization=kodetesting
-            -Dsonar.sources=src/main/java 
-            -Dsonar.tests=src/test/java
+            #-Dsonar.sources=src/main/java 
+            #-Dsonar.tests=src/test/java
             # Comma-separated paths to directories containing main source files.
             # When you need the analysis to take place in a directory other than the one from which it was launched
             #-Dsonar.projectBaseDir= # optional, default is .
