--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -48,6 +48,8 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      - name: List files
+        run: ls -R
         
 
   Analysis:
@@ -56,6 +58,11 @@ jobs:
     
 
     steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
       - name: List files
         run: ls -R
 
