--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -50,6 +50,8 @@ jobs:
         run: mvn -B package --file pom.xml
       - name: List files
         run: ls -R
+      - name: Coverage
+        run: mvn sonar:sonar -Pcoverage  -Dsonar.organization=${{vars.SONAR_ORG}} -Dsonar.host.url=${{vars.SONAR_HOST_URL}} -Dsonar.login=${{vars.SONAR_LOGIN}}
         
 
   Analysis:
@@ -58,18 +60,6 @@ jobs:
     
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-      - name: List files
-        run: ls -R
-
       - name: Analyze with SonarCloud
         # You can pin the exact commit or the version.
         # uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
