--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -51,7 +51,11 @@ jobs:
       - name: List files
         run: ls -R
       - name: Coverage
-        run: mvn sonar:sonar -Pcoverage  -Dsonar.organization=${{vars.SONAR_ORG}} -Dsonar.projectKey=kodetesting_testing-demo1 -Dsonar.host.url=${{vars.SONAR_HOST_URL}} -Dsonar.login=${{vars.SONAR_LOGIN}}
+        run: mvn sonar:sonar \
+              -Pcoverage  -Dsonar.organization=${{vars.SONAR_ORG}} \
+              -Dsonar.projectKey=kodetesting_testing-demo1 \
+              -Dsonar.host.url=${{vars.SONAR_HOST_URL}} \
+              -Dsonar.login=${{vars.SONAR_LOGIN}}
         
 
   Analysis:
