--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,31 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow helps you trigger a SonarCloud analysis of your code and populates
-# GitHub Code Scanning alerts with the vulnerabilities found.
-# Free for open source project.
-
-# 1. Login to SonarCloud.io using your GitHub account
-
-# 2. Import your project on SonarCloud
-#     * Add your GitHub organization first, then add your repository as a new project.
-#     * Please note that many languages are eligible for automatic analysis,
-#       which means that the analysis will start automatically without the need to set up GitHub Actions.
-#     * This behavior can be changed in Administration > Analysis Method.
-#
-# 3. Follow the SonarCloud in-product tutorial
-#     * a. Copy/paste the Project Key and the Organization Key into the args parameter below
-#          (You'll find this information in SonarCloud. Click on "Information" at the bottom left)
-#
-#     * b. Generate a new token and add it to your Github repository's secrets using the name SONAR_TOKEN
-#          (On SonarCloud, click on your avatar on top-right > My account > Security
-#           or go directly to https://sonarcloud.io/account/security/)
-
-# Feel free to take a look at our documentation (https://docs.sonarcloud.io/getting-started/github/)
-# or reach out to our community forum if you need some help (https://community.sonarsource.com/c/help/sc/9)
-
 name: SonarCloud analysis
 
 on:
@@ -51,8 +23,8 @@ jobs:
       - name: List files
         run: ls -R
       - name: Coverage
-        run: mvn sonar:sonar \
-              -Pcoverage  -Dsonar.organization=${{vars.SONAR_ORG}} \
+        run: mvn sonar:sonar -Pcoverage \
+              -Dsonar.organization=${{vars.SONAR_ORG}} \
               -Dsonar.projectKey=kodetesting_testing-demo1 \
               -Dsonar.host.url=${{vars.SONAR_HOST_URL}} \
               -Dsonar.login=${{vars.SONAR_LOGIN}}
@@ -61,7 +33,6 @@ jobs:
   Analysis:
     runs-on: ubuntu-latest
     needs: [Build]
-    
 
     steps:
       - name: Analyze with SonarCloud
@@ -77,7 +48,7 @@ jobs:
             # Unique keys of your project and organization. You can find them in SonarCloud > Information (bottom-left menu)
             # mandatory
             -Dsonar.projectKey=kodetesting_testing-demo1
-            -Dsonar.organization=kodetesting
+            -Dsonar.organization=${{vars.SONAR_ORG}}
             #-Dsonar.sources=./src/main/java 
             #-Dsonar.tests=src/test/java
             # Comma-separated paths to directories containing main source files.
