--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -24,11 +24,11 @@ jobs:
         run: ls -R
       - name: Coverage
         run: > 
-            mvn sonar:sonar -Pcoverage 
-              -Dsonar.organization=${{vars.SONAR_ORG}} 
-              -Dsonar.projectKey=${{vars.SONAR_PROJECT_KEY}} 
-              -Dsonar.host.url=${{vars.SONAR_HOST_URL}} 
-              -Dsonar.login=${{vars.SONAR_LOGIN}}
+            mvn sonar:sonar \
+              -Dsonar.organization=${{vars.SONAR_ORG}} \
+              -Dsonar.projectKey=${{vars.SONAR_PROJECT_KEY}} \ 
+              -Dsonar.host.url=${{vars.SONAR_HOST_URL}} \
+              -Dsonar.login=${{vars.SONAR_LOGIN}} 
         
 
   Analysis:
