--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -23,12 +23,7 @@ jobs:
       - name: List files
         run: ls -R
       - name: Coverage
-        run: >- 
-            mvn sonar:sonar 
-              -Dsonar.organization=${{vars.SONAR_ORG}} 
-              -Dsonar.projectKey=${{vars.SONAR_PROJECT_KEY}} 
-              -Dsonar.host.url=${{vars.SONAR_HOST_URL}} 
-              -Dsonar.login=${{vars.SONAR_LOGIN}} 
+        run: mvn sonar:sonar -Dsonar.organization=${{vars.SONAR_ORG}} -Dsonar.projectKey=${{vars.SONAR_PROJECT_KEY}} -Dsonar.host.url=${{vars.SONAR_HOST_URL}} -Dsonar.login=${{vars.SONAR_LOGIN}} 
         
 
   Analysis:
