--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -22,8 +22,6 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn clean install
-      - name: List files
-        run: ls -R
       - name: Coverage
         run: mvn sonar:sonar -Dsonar.organization=${{vars.SONAR_ORG}} -Dsonar.projectKey=${{vars.SONAR_PROJECT_KEY}} -Dsonar.host.url=${{vars.SONAR_HOST_URL}} -Dsonar.login=${{secrets.SONAR_TOKEN}} 
       - name: Coverage1
@@ -41,16 +39,12 @@ jobs:
 
     steps:
       - name: Analyze with SonarCloud
-        # You can pin the exact commit or the version.
-        # uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
         uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}   # Generate a token on Sonarcloud.io, add it to the secrets of this repo with the name SONAR_TOKEN (Settings > Secrets > Actions > add new repository secret)
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          # Additional arguments for the sonarcloud scanner
           args:
-            # Unique keys of your project and organization. You can find them in SonarCloud > Information (bottom-left menu)
             # mandatory
             -Dsonar.projectKey=${{vars.SONAR_PROJECT_KEY}}
             -Dsonar.organization=${{vars.SONAR_ORG}}
