--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,12 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
-      - name: List files
-        run: ls -R
+        run: mvn clean install
+      - name: Coverage
+        run: > 
+          mvn sonar:sonar 
+          -Dsonar.organization=${{vars.SONAR_ORG}} 
+          -Dsonar.projectKey=${{vars.SONAR_PROJECT_KEY}} 
+          -Dsonar.host.url=${{vars.SONAR_HOST_URL}} 
+          -Dsonar.login=${{secrets.SONAR_TOKEN}} 
     
