--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,34 +1,14 @@
 name: SonarCloud analysis
 
 on:
+  push:
+    branches: [main]
   workflow_dispatch:
 
 permissions:
   pull-requests: read # allows SonarCloud to decorate PRs with analysis results
 
 jobs:
-  Build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: maven
-      - name: Build with Maven
-        run: mvn clean install
-      - name: Coverage
-        run: > 
-          mvn sonar:sonar 
-          -Dsonar.organization=${{vars.SONAR_ORG}} 
-          -Dsonar.projectKey=${{vars.SONAR_PROJECT_KEY}} 
-          -Dsonar.host.url=${{vars.SONAR_HOST_URL}} 
-          -Dsonar.login=${{secrets.SONAR_TOKEN}} 
-        
-
   Analysis:
     runs-on: ubuntu-latest
     needs: [Build]
@@ -53,3 +33,24 @@ jobs:
             #-Dsonar.tests= # optional. For more info about Code Coverage, please refer to https://docs.sonarcloud.io/enriching/test-coverage/overview/
             # Adds more detail to both client and server-side analysis logs, activating DEBUG mode for the scanner, and adding client-side environment variables and system properties to the server-side log of analysis report processing.
             #-Dsonar.verbose= # optional, default is false
+            
+  Build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn clean install
+      - name: Coverage
+        run: > 
+          mvn sonar:sonar 
+          -Dsonar.organization=${{vars.SONAR_ORG}} 
+          -Dsonar.projectKey=${{vars.SONAR_PROJECT_KEY}} 
+          -Dsonar.host.url=${{vars.SONAR_HOST_URL}} 
+          -Dsonar.login=${{secrets.SONAR_TOKEN}} 
